tests/TestDeca/version1.1/src/test/deca/syntax/valid/provided/MultiInst.deca
/*

This is a test to ensure we take multi-instruction 
lines into consideration.

*/




{
    int x = 1 ;
    string e = "e"; 
    println("First line");


}