tests/TestDeca/version1.1/src/test/deca/syntax/invalid/provided/println_badString.deca

/*

This file make sure we define correctly
our input string, it's an invalide test.

*/



{
    println("Unclosed string);
}